<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#50CCEEEB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/OutlineColor"
        app:strokeWidth="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_gambarKos"
                    android:layout_width="140dp"
                    android:layout_height="120dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/img_contohgambarkos" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_gambarKos"
                    app:layout_constraintTop_toTopOf="parent">


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tv_tipeDetail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_tipekos"
                            android:fontFamily="@font/nunito_sans_semibold"
                            android:gravity="center"
                            android:paddingHorizontal="4dp"
                            android:paddingVertical="2dp"
                            android:text="@string/tipekos"
                            android:textColor="#70000000"
                            android:textSize="9sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <LinearLayout
                            android:id="@+id/linearLayout3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="vertical"
                            app:layout_constraintTop_toBottomOf="@+id/tv_tipeDetail">

                            <TextView
                                android:id="@+id/tv_namaItem"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/nunito_sans_bold"
                                android:text="@string/nama_kos"
                                android:textColor="@color/PrimaryColor"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/tv_alamatItem"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/nunito_sans_semibold"
                                android:text="@string/alamat"
                                android:textColor="@color/SecondaryColor"
                                android:textSize="11sp" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/tv_hargaItem"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/nunito_sans_semibold"
                            android:text="@string/harga"
                            android:textAlignment="textEnd"
                            android:textColor="@color/SecondaryColor"
                            android:textSize="13sp"
                            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                            tools:layout_editor_absoluteX="0dp" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>