<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ScreenColor"
    tools:context=".ui.loginRegisterPage.RegisterActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/PrimaryColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_backbtn_lightgreen" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        app:flow_verticalGap="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="191dp">

            <TextView
                android:id="@+id/textView"
                style="@style/TitleFormStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/title1_reg"
                android:textColor="@color/SecondaryColor" />

            <TextView
                android:id="@+id/textView2"
                style="@style/TitleFormStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title2_reg"
                android:textColor="@color/PrimaryColor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="253dp">


            <TextView
                android:id="@+id/textView7"
                style="@style/InputTitleFormStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:text="@string/nama_reg"
                android:textColor="@color/SecondaryColor" />

           <!-- <EditText
                android:id="@+id/edt_namaRegis"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/bg_btn_inputform"
                android:drawableLeft="@drawable/ic_acc_outlined"
                android:drawablePadding="10dp"
                android:fontFamily="@font/nunito_sans"
                android:hint="Masukkan nama lengkap sesuai identitas"
                android:inputType="textPersonName"
                android:paddingHorizontal="12dp"
                android:paddingVertical="10dp"
                android:textColorHint="#5000554F"
                android:textSize="16sp" />-->

            <com.google.android.material.textfield.TextInputLayout
                style="@style/CustomEditTextStyle"
                android:id="@+id/textInputLayout"
                android:backgroundTint="@color/SecondaryColor"
                android:layout_width="match_parent"
                app:startIconDrawable="@drawable/ic_acc_outlined"
                app:startIconTint="@color/SecondaryColor"
                app:endIconMode="clear_text"
                android:layout_height="56dp"
                android:hint="Masukkan nama">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_namaRegis"
                    android:layout_width="match_parent"
                    android:inputType="textPersonName"
                    android:padding="0dp"
                    android:textColor="@color/SecondaryColor"
                    android:fontFamily="@font/nunito_sans"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="28dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="354dp">

            <TextView
                android:id="@+id/textView9"
                style="@style/InputTitleFormStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:text="@string/email_reg" />

<!--            <EditText
                android:id="@+id/edt_emailRegis"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_btn_inputform"
                android:drawableLeft="@drawable/ic_email_outlined"
                android:drawablePadding="10dp"
                android:ems="10"
                android:fontFamily="@font/nunito_sans"
                android:hint="Masukkan email"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="12dp"
                android:paddingVertical="10dp"
                android:textColorHint="#5000554F"
                android:textSize="16sp" />-->

            <com.google.android.material.textfield.TextInputLayout
                style="@style/CustomEditTextStyle"
                android:id="@+id/textInputLayout2"
                android:backgroundTint="@color/SecondaryColor"
                android:layout_width="match_parent"
                app:startIconDrawable="@drawable/ic_email_outlined"
                app:startIconTint="@color/SecondaryColor"
                app:endIconMode="clear_text"
                android:layout_height="56dp"
                android:hint="Masukkan email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_emailRegis"
                    android:layout_width="match_parent"
                    android:inputType="textEmailAddress"
                    android:padding="0dp"
                    android:textColor="@color/SecondaryColor"
                    android:fontFamily="@font/nunito_sans"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="28dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="354dp">

            <TextView
                android:id="@+id/textView10"
                style="@style/InputTitleFormStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:text="@string/katasandi_reg" />

        <!--    <EditText
                android:id="@+id/edt_katasandiRegis"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_btn_inputform"
                android:drawableLeft="@drawable/ic_lock_outlined"
                android:drawableRight="@drawable/ic_eye_outlined"
                android:drawablePadding="10dp"
                android:ems="10"
                android:fontFamily="@font/nunito_sans"
                android:hint="Masukkan kata sandi"
                android:inputType="textPassword"
                android:paddingHorizontal="12dp"
                android:paddingVertical="10dp"
                android:textColorHint="#5000554F"
                android:textSize="16sp" />-->

            <com.google.android.material.textfield.TextInputLayout
                style="@style/CustomEditTextStyle"
                android:id="@+id/textInputLayout3"
                android:backgroundTint="@color/SecondaryColor"
                android:layout_width="match_parent"
                app:startIconDrawable="@drawable/ic_lock_outlined"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/SecondaryColor"
                app:passwordToggleDrawable="@drawable/ic_eye_outlined"
                app:startIconTint="@color/SecondaryColor"
                android:layout_height="56dp"
                android:hint="Masukkan password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_katasandiRegis"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:padding="0dp"
                    android:textColor="@color/SecondaryColor"
                    android:fontFamily="@font/nunito_sans"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="28dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="354dp">

            <TextView
                android:id="@+id/textView11"
                style="@style/InputTitleFormStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:text="@string/konfirmsandi_reg" />

            <!--<EditText
                android:id="@+id/edt_konfirmsandiRegis"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_btn_inputform"
                android:drawableLeft="@drawable/ic_lock_outlined"
                android:drawableRight="@drawable/ic_eye_outlined"
                android:drawablePadding="10dp"
                android:ems="10"
                android:fontFamily="@font/nunito_sans"
                android:hint="Masukkan kembali kata sandi"
                android:inputType="textPassword"
                android:paddingHorizontal="12dp"
                android:paddingVertical="10dp"
                android:textColorHint="#5000554F"
                android:textSize="16sp" />-->

            <com.google.android.material.textfield.TextInputLayout
                style="@style/CustomEditTextStyle"
                android:id="@+id/textInputLayout4"
                android:backgroundTint="@color/SecondaryColor"
                android:layout_width="match_parent"
                app:startIconDrawable="@drawable/ic_lock_outlined"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/SecondaryColor"
                app:passwordToggleDrawable="@drawable/ic_eye_outlined"
                app:startIconTint="@color/SecondaryColor"
                android:layout_height="56dp"
                android:hint="Masukkan konfirmasi kata sandi">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_konfirmsandiRegis"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:padding="0dp"
                    android:textColor="@color/SecondaryColor"
                    android:fontFamily="@font/nunito_sans"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_daftarRegis"
            style="@style/GreenButtonForm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_btn_green"
            android:text="Daftar"
            android:textAllCaps="false" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/sudahakun_reg"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/tv_masukRegis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="3dp"
                android:fontFamily="@font/nunito_sans_semibold"
                android:text="@string/btnmasuk_reg"
                android:textColor="@color/PrimaryColor"
                android:textSize="11sp" />
        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.811"
        app:srcCompat="@drawable/logokostifywithtexthijau70" />

</androidx.constraintlayout.widget.ConstraintLayout>